--- a/views/signup.html
+++ b/views/signup.html
@@ -17,7 +17,7 @@
             <nav class="nav nav--tours">
                 <a href="/" class="nav__el">All News</a>
             </nav>
-            <div class="header__logo"><img src="./img/logo.png" alt="epharmacists logo"></div>
+            <div class="header__logo"><img src="img/logo.png" alt="epharmacists logo"></div>
         </header>
         <content class="main">
             <div class="login-form">
@@ -38,7 +38,7 @@
                             minlength="8" />
                     </div>
                     <div class="form__group ma-bt-md">
-                        <label for="password-confirm" class="form__label">Password</label>
+                        <label for="password-confirm" class="form__label">Confirm Password</label>
                         <input type="password" class="form__input" id="password-confirm" placeholder="********"
                             required="required" minlength="8" />
                     </div>
