--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -15,7 +15,7 @@
     <body>
         <header class="header">
             <nav class="nav nav--tours">
-                <a href="/" class="nav_el">All News</a>
+                <a href="/" class="nav__el">All News</a>
             </nav>
             <div class="header__logo"><img src="./img/logo.png" alt="epharmacists logo"></div>
             <nav class="nav nav--user"></nav>
