--- a/views/myprofilepage.html
+++ b/views/myprofilepage.html
@@ -60,7 +60,8 @@
         </div>
         <p class="footer__copyright">&copy; E-Pharmacist, Autumn Semester 2022!</p>
     </footer>
-  
+    <script type="module" src="./js/myprofile.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
 
 </body>
 
