--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -20,7 +20,36 @@
             <div class="header__logo"><img src="./img/logo.png" alt="epharmacists logo"></div>
             <nav class="nav nav--user"></nav>
         </header>
-        <content class="main"></content>
+        <content class="main">
+            <div class="card-container">
+                <div class="card">
+                    <div class="card__header">
+                        <div class="card__picture">
+                            <div class="card picture-overlay">&nbsp;</div>
+                            <img src="img/news/news-1-cover.jpg" alt="News 1 picture" class="card__picture-img">
+                        </div>
+                        <h3 class="heading-tertirary">
+                            <span>News</span>
+                        </h3>
+                    </div>
+                    <div class="card__details">
+                        <h4 class="card__sub-heading"></h4>
+                        <p class="card__text"></p>
+                        <div class="card__data">
+                            <svg class="card__icon"></svg>
+                            <span class="publishedAt"></span>
+                        </div>
+                        <div class="card__data">
+                            <svg class="card__icon"></svg>
+                            <span class="publishedBy"></span>
+                        </div>
+                    </div>
+                    <div class="card__footer">
+                        <a href="#" class="btn btn--green btn--small">Details</a>
+                    </div>
+                </div>
+            </div>
+        </content>
         <footer class="footer">
             <div class="footer__logo"><img src="./img/logo.png" alt="epharmacist logo" />
                 <p>Agile Software Management System</p>
