--- a/views/signup.html
+++ b/views/signup.html
@@ -39,8 +39,8 @@
                     </div>
                     <div class="form__group ma-bt-md">
                         <label for="password-confirm" class="form__label">Confirm Password</label>
-                        <input type="password" class="form__input" id="password-confirm" placeholder="********"
-                            required="required" minlength="8" />
+                        <input type="password" class="form__input" id="passwordConfirm" placeholder="********"
+                         required="required" minlength="8" />
                     </div>
                     <div class="form__group">
                         <label for="role" class="form__label">Role</label>
